--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -14,6 +14,37 @@ body{
   background-color:#0dcaf0;
 }
 
+
+/* ================= CSS Sor dialog change stt customer ==================== */
+#confirmation-dialog {
+  display: none;
+  position: fixed;
+  z-index: 3;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+#confirmation-dialog-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  text-align: center;
+  z-index: 1;
+}
+
+#confirmation-dialog-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
 /* ================= CSS Sor sidebar ==================== */
 
 @media only screen and (max-width: 768px) {
