--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -117,6 +117,11 @@ body {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
+.items-card>div>a{
+    text-decoration: none;
+    color: black;
+}
+
 
 .btn-add-to-cart {
     margin-left: 20px;
