edit some code to show detail product, and add test dât

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -123,6 +123,13 @@ body {
 }
 
 
+
+.product-image {
+    aspect-ratio : 1 / 1;
+}
+
+
+
 .btn-add-to-cart {
     margin-left: 20px;
     width: 125px;
