--- a/app/views/admin/assets/css/login.css
+++ b/app/views/admin/assets/css/login.css
@@ -20,10 +20,11 @@
     flex-wrap: wrap;
 }
 .navbar{
-    background: linear-gradient(to right, rgba(50,197,246,1) 0%, rgba(0,68,255,1) 100%);
+    /* background: linear-gradient(to right, rgba(50,197,246,1) 0%, rgba(0,68,255,1) 100%); */
+    background: #B2BEC9;
 }
 .navbar > .container img{
-    max-width: 140px;
+    max-width: 150px;
 }
 main{
     margin-top: 50px;
@@ -37,7 +38,7 @@ main{
 }
 
 body {
-    background-color: rgb(148, 218, 241);
+    /* background-color: rgb(148, 218, 241); */
     min-height: 93vh
 }
 
@@ -50,7 +51,8 @@ body {
     max-width: 400px;
     min-height: 300px;
     margin: 30px;
-    background: linear-gradient(to right, rgba(50,197,246,1) 0%, rgba(0,68,255,1) 100%);
+    /* background: linear-gradient(to right, rgba(50,197,246,1) 0%, rgba(0,68,255,1) 100%); */
+    background: #656D74;
     overflow: hidden;
     backdrop-filter: blur(10px);
     border: 1px solid rgba(27, 25, 25, 0.5);
