--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -139,7 +139,6 @@ body {
 
 
 /* Product detail page */
-
 .product-description>div>div  {
     padding: 15px;
     border-radius: 5px;
@@ -149,6 +148,9 @@ body {
 }
 
 /* Cart page */
+.cart-shadow {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
 .cart-main {
     /* background-color: rgb(240, 240, 240); */
     min-height: 100vh;
@@ -198,3 +200,10 @@ body {
     border-radius: 10px;
     text-align: center;
   }
+
+
+/* Order page */
+.order-shadow {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    border-radius: 5px;
+}
